--- a/Dracula-main/style.css
+++ b/Dracula-main/style.css
@@ -20,10 +20,16 @@
 .dracula{
     border-style: inset;
     border-color: darkred;
+    width: 20%;
 }
 
 
 
 .foto:hover{
-    transform: scale(1.1);
+    transform: scale(1.1)
 }
+
+.foto{
+    width: 20%;
+}
+
